--- a/assets/sass/bibliotecas.scss
+++ b/assets/sass/bibliotecas.scss
@@ -8,8 +8,8 @@
 /* Unsemantic */
 @import "../../bower_components/unsemantic/assets/sass/unsemantic-grid-responsive-tablet-no-ie7";
 
-/* Tokeninput */
-@import url("../../bower_components/jquery-tokeninput/styles/token-input.css");
+/*  */
+@import url("../../bower_components/jquery.tagsinput/dist/jquery.tagsinput.min.css");
 
 /* jQuery UI - Theme Smoothness */
 @import url("../../bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css");
