--- a/assets/sass/imports/_custom-jquery-ui-theme.scss
+++ b/assets/sass/imports/_custom-jquery-ui-theme.scss
@@ -37,6 +37,7 @@ div[aria-describedby='dialog-contato'].ui-dialog {
         font-size: 12px;
     }
     .dialog-contato {
+        display: none;
         padding: 30px 14%;
         p {
             @include font-px( $regular, 15, #333);
@@ -58,7 +59,7 @@ div[aria-describedby='dialog-contato'].ui-dialog {
             }
             .campo {
                 width: 100%;
-                height: 29px;
+                height: 38px;
                 @include border-radius(5px);
                 border: 1px solid #ccc;
                 margin: 5px 0 15px;
@@ -66,13 +67,19 @@ div[aria-describedby='dialog-contato'].ui-dialog {
                 @include font-px( $regular, 16, #333);
                 &.mensagem {
                     padding: 15px;
-                    min-height: 99px;
+                    min-height: 100px;
                 }
+            }
+            .tagsinput{
+                @include border-radius(5px);
+                border: 1px solid #ccc;
+                margin: 5px 0 15px;
             }
             .btn-enviar {
                 background: $vermelho;
                 width: 250px;
-                height: 61px;
+                max-width: 100%;
+                height: 60px;
                 text-align: center;
                 @include font-px( $regular, 18, #fff);
                 @include border-radius(30px);
