--- a/assets/sass/bibliotecas.scss
+++ b/assets/sass/bibliotecas.scss
@@ -8,7 +8,10 @@
 /* Unsemantic */
 @import "../../bower_components/unsemantic/assets/sass/unsemantic-grid-responsive-tablet-no-ie7";
 
-/*  */
+/* Font Awesome  */
+@import "../../bower_components/font-awesome/scss/font-awesome";
+
+/* jQuery Tags Input */
 @import url("../../bower_components/jquery.tagsinput/dist/jquery.tagsinput.min.css");
 
 /* jQuery UI - Theme Smoothness */
