--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -20,4 +20,4 @@
 /* Estilo das Páginas Internas do Projeto */
 
 @import 'imports/destaques';
-@import 'imports/custom-jquery-ui-theme';
+@import 'imports/contato';
