--- a/assets/sass/imports/_contato.scss
+++ b/assets/sass/imports/_contato.scss
@@ -42,9 +42,19 @@ $vermelho: #9a3235;
             @include font-px( $regular, 15, #333);
             text-align: center;
         }
+        @media #{$mobile} {
+            padding: 20px 20px;
+            p {
+                font-size: 14px;
+            }
+        }
         .validacao {
             height: 60px;
             padding: 10px 0 0;
+            @media #{$mobile} {
+                height: auto;
+                padding: 10px 0;
+            }
             p {
                 display: none;
                 padding: 5px;
@@ -84,18 +94,25 @@ $vermelho: #9a3235;
             width: 38px;
             height: 38px;
             cursor: pointer;
+            padding: 10px;
         }
         .btn-enviar {
-            background: $vermelho;
+            background: transparent;
+            border: 1px solid $vermelho;
             width: 250px;
             max-width: 100%;
             height: 60px;
             text-align: center;
-            @include font-px( $regular, 18, #fff);
+            @include font-px( $regular, 18, $vermelho);
             @include border-radius(30px);
             margin: 0 auto;
             display: block;
             cursor: pointer;
+            @extend %transition;
+            &:hover {
+                background: $vermelho;
+                color: #fff;
+            }
         }
     }
 }
